# candlebar

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
docs/: CODE_SIGNING.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DataItem.tsx  DataList.tsx  ErrorBoundary.tsx
src/components/custom/: CustomDataList.tsx
src/components/layout/: BottomBar.tsx  Header.tsx
src/components/modals/: APIsTab.tsx  ManageModal.tsx  SettingsTab.tsx  StocksTab.tsx
src/components/stocks/: StockItem.tsx  StockList.tsx
src/components/ui/: switch.tsx
src/hooks/: useCustomData.ts  useKeyboardShortcuts.ts  useStocks.ts
src/lib/: api.ts  constants.ts  store.ts  validation.ts
src/types/: index.ts
