[package]
name = "candlebar"
version = "0.1.0"
description = "A simple stock ticker for macOS menu bar"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yahoo_finance_api = "2.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[lib]
name = "candlebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "candlebar"
path = "src/main.rs"
